syntax = "proto3";

package agent.os; // 패키지 이름을 설정합니다.

option csharp_namespace = "InfoGatherHub.HubProtos.Agent.Os";
option java_package = "devsanso.github.io.HubServer.protos.agent.os";

enum DataFormat {
    NetArp = 0;
    NetDev = 1;
    NetSockStat = 2;
    NetTcp4Stat = 3;
}

message Data {
    DataFormat format = 1;
    bytes raw_data = 2;
}

message AgentOsSnap {
    uint64 unix_epoch = 1;
    repeated Data datas = 2;
}